--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
 	},
 	"dependencies": {
 		"expo": "^22.0.4",
+		"native-base": "^2.3.3",
 		"react": "16.0.0-beta.5",
-		"react-native": "0.50.3",
-		"native-base": "^2.3.3"
+		"react-native": "0.50.3"
 	},
 	"devDependencies": {
+		"babel-core": "^6.0.0",
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
-		"babel-core": "^6.0.0",
 		"jest": "21.2.1",
 		"jest-expo": "^22.0.0",
-		"react-test-renderer": "16.0.0",
-		"react-native-scripts": "1.7.0"
+		"react-native-scripts": "1.7.0",
+		"react-test-renderer": "16.0.0"
 	},
 	"jest": {
 		"preset": "react-native"
