--- a/ios/myBike/Info.plist
+++ b/ios/myBike/Info.plist
@@ -64,6 +64,9 @@
 		<string>rubicon-icon-font.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>fontawesome.ttf</string>
+		<string>Muli-Light.ttf</string>
+		<string>Muli-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
