login page made

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"version": "0.0.1",
 	"private": true,
 	"rnpm": {
-   "assets": ["./assets/fonts"]
+		"assets": [
+			"./assets/fonts"
+		]
 	},
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
@@ -13,7 +15,8 @@
 		"expo": "^22.0.4",
 		"native-base": "^2.3.3",
 		"react": "16.0.0-beta.5",
-		"react-native": "0.50.3"
+		"react-native": "0.50.3",
+		"react-native-router-flux": "^4.0.0-beta.24"
 	},
 	"devDependencies": {
 		"babel-core": "^6.0.0",
